--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 dependencies {
     compile group: "org.springframework.statemachine", name: "spring-statemachine-core", version: "2.1.3.RELEASE"
     compile("org.springframework:spring-context:5.2.0.RELEASE")
+  //  testCompile("org.springframework.boot:spring-boot-starter-test:5.2.0.RELEASE")
+  //  compile("org.springframework.boot:spring-boot-starter-test:5.2.0.RELEASE")
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'junit', name: 'junit', version: '4.12'
 }
